--- a/MyAccount/Web.config
+++ b/MyAccount/Web.config
@@ -49,9 +49,8 @@
         </providers>
       </personalization>
     </webParts>
-
     <authentication mode="Forms">
-      <forms loginUrl="~/Login/Index"/>
+      <forms loginUrl="~/Login/Index" />
     </authentication>
   </system.web>
   <entityFramework>
@@ -74,7 +73,6 @@
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -83,4 +81,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<connectionStrings><add name="DbContext" connectionString="server=localhost;user id=root;password=235;persistsecurityinfo=True;database=myaccount" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
+ 
+<connectionStrings><add name="Entities" connectionString="server=localhost;user id=root;password=235;persistsecurityinfo=True;database=myaccount" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
