--- a/MyAccount.Tests/app.config
+++ b/MyAccount.Tests/app.config
@@ -13,8 +13,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <remove name="LocalMySqlServer" />
-    <add name="DbContext" connectionString="server=localhost;user id=root;password=235;persistsecurityinfo=True;database=myaccount" providerName="MySql.Data.MySqlClient" />
+    <add name="Entities" connectionString="server=localhost;user id=root;password=235;persistsecurityinfo=True;database=myaccount" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -24,7 +23,8 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+    </providers>
   </entityFramework>
   <system.data>
     <DbProviderFactories>
