Added authentication areaé

--- a/MyAccount/Web.config
+++ b/MyAccount/Web.config
@@ -50,7 +50,7 @@
       </personalization>
     </webParts>
     <authentication mode="Forms">
-      <forms loginUrl="~/Login/Index" />
+      <forms loginUrl="~/Authentication/" />
     </authentication>
   </system.web>
   <entityFramework>
